--- a/codes/1.0_Forex_Basics.ipynb
+++ b/codes/1.0_Forex_Basics.ipynb
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=green>Risk-Reward Ratio</font>"
+    "## <font color=green>Reward-Risk Ratio</font>"
    ]
   },
   {
@@ -72,7 +72,7 @@
     "<br>\n",
     "One of the most popular method is to set TP and SL with ratio > 1. Even at win-rate significantly less than 50%, traders can still be profitable as long as their reward-risk ratio is high.<br> \n",
     "<br>\n",
-    "Of course the **caveat is that when SL is closer to the entry price, the probabilty of price reaching the the SL level is higher than reaching the TP level**.</font>\n",
+    "Of course the **caveat is that when SL is closer to the entry price, the probability of price reaching the the SL level is higher than reaching the TP level**.</font>\n",
     "![](../images/Positive-RRR.jpg)\n",
     "![](../images/RRR_winrate.png)"
    ]
