--- a/codes/4.0_Target_define_D1.ipynb
+++ b/codes/4.0_Target_define_D1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,18 +489,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "threshold = 0.0140\n",
+    "take_profit = 0.014\n",
+    "reward_risk_ratio = 3\n",
     "\n",
     "for date in look_ahead_7d:\n",
     "    for i in range (7):\n",
-    "        if look_ahead_7d[date]['price_list_lo'][i] > -0.33*threshold and look_ahead_7d[date]['price_list_hi'][i] > threshold:\n",
+    "        if look_ahead_7d[date]['price_list_lo'][i] > -1/reward_risk_ratio*take_profit and look_ahead_7d[date]['price_list_hi'][i] > take_profit:\n",
     "            look_ahead_7d[date]['results'] = 1\n",
     "            break\n",
-    "        elif look_ahead_7d[date]['price_list_hi'][i] < 0.33*threshold and look_ahead_7d[date]['price_list_lo'][i] < -1*threshold:\n",
+    "        elif look_ahead_7d[date]['price_list_hi'][i] < 1/reward_risk_ratio*take_profit and look_ahead_7d[date]['price_list_lo'][i] < -1*take_profit:\n",
     "            look_ahead_7d[date]['results'] = 2\n",
     "            break\n",
     "        else:\n",
@@ -509,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +582,7 @@
        "2003-01-06       1"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +605,7 @@
        "Name: results, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +634,7 @@
        "(5307, 4)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +654,7 @@
        "(5300, 1)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +761,7 @@
        "2003-01-06  1.0447  1.0496  1.0425  1.0440       1"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +857,7 @@
        "2019-12-23  1.10783  1.10958  1.10699  1.10881       1"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +877,7 @@
        "(5300, 5)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
