--- a/codes/4.1_Target_define_H1.ipynb
+++ b/codes/4.1_Target_define_H1.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "2003-01-01 23:00:00  1.0469  1.0477  1.0469  1.0476"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "(105631, 4)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,16 +162,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x12613e390>"
+       "<matplotlib.legend.Legend at 0x11f69efd0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "2003-01-01 23:00:00  1.0469  1.0477  1.0469  1.0476"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
        "7604532"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,18 +527,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "threshold = 0.0055\n",
+    "threshold = 0.0042\n",
+    "reward_risk_ratio = 2\n",
     "\n",
     "for date in look_ahead_24:\n",
     "    for i in range (24):\n",
-    "        if look_ahead_24[date]['price_list_lo'][i] > -0.33*threshold and look_ahead_24[date]['price_list_hi'][i] > threshold:\n",
+    "        if look_ahead_24[date]['price_list_lo'][i] > -1/reward_risk_ratio*threshold and look_ahead_24[date]['price_list_hi'][i] > threshold:\n",
     "            look_ahead_24[date]['results'] = 1\n",
     "            break\n",
-    "        elif look_ahead_24[date]['price_list_hi'][i] < 0.33*threshold and look_ahead_24[date]['price_list_lo'][i] < -1*threshold:\n",
+    "        elif look_ahead_24[date]['price_list_hi'][i] < 1/reward_risk_ratio*threshold and look_ahead_24[date]['price_list_lo'][i] < -1*threshold:\n",
     "            look_ahead_24[date]['results'] = 2\n",
     "            break\n",
     "        else:\n",
@@ -547,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +620,7 @@
        "2003-01-01 23:00:00       2"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,19 +631,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1    0.350895\n",
-       "2    0.339788\n",
-       "0    0.309317\n",
+       "1    0.422642\n",
+       "2    0.408278\n",
+       "0    0.169080\n",
        "Name: results, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +672,7 @@
        "(105631, 4)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +692,7 @@
        "(105607, 1)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +799,7 @@
        "2003-01-01 23:00:00  1.0469  1.0477  1.0469  1.0476       2"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +895,7 @@
        "2019-12-30 16:00:00  1.11983  1.12027  1.11978  1.11985       0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +915,7 @@
        "(105607, 5)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
