--- a/codes/5.1_Feature_Engineering_H1.ipynb
+++ b/codes/5.1_Feature_Engineering_H1.ipynb
@@ -576,7 +576,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x12567f110>"
+       "<matplotlib.legend.Legend at 0x128fd7310>"
       ]
      },
      "execution_count": 9,
@@ -882,7 +882,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x12187c1d0>]"
+       "[<matplotlib.lines.Line2D at 0x1251d7090>]"
       ]
      },
      "execution_count": 19,
@@ -2457,7 +2457,7 @@
        "      <td>1.0488</td>\n",
        "      <td>1.0433</td>\n",
        "      <td>1.0436</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>1.0474</td>\n",
@@ -3031,7 +3031,7 @@
        "2003-01-01 23:00:00  1.0469  1.0477  1.0469  1.0476        2         23   \n",
        "2003-01-02 00:00:00  1.0475  1.0476  1.0470  1.0475        2          0   \n",
        "2003-01-02 01:00:00  1.0474  1.0478  1.0470  1.0474        2          1   \n",
-       "2003-01-02 02:00:00  1.0475  1.0488  1.0433  1.0436        2          2   \n",
+       "2003-01-02 02:00:00  1.0475  1.0488  1.0433  1.0436        1          2   \n",
        "2003-01-02 03:00:00  1.0437  1.0464  1.0434  1.0460        2          3   \n",
        "2003-01-02 04:00:00  1.0459  1.0485  1.0457  1.0475        2          4   \n",
        "\n",
