--- a/codes/5.1_Feature_Engineering_H1.ipynb
+++ b/codes/5.1_Feature_Engineering_H1.ipynb
@@ -576,7 +576,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x128fd7310>"
+       "<matplotlib.legend.Legend at 0x125926f10>"
       ]
      },
      "execution_count": 9,
@@ -882,7 +882,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1251d7090>]"
+       "[<matplotlib.lines.Line2D at 0x121b39d90>]"
       ]
      },
      "execution_count": 19,
@@ -3717,20 +3717,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <font color=red>Please note that below file is not avilable in the github repo due to large file size. Please run notebook and save file in your own local repo before model training</font>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save df\n",
     "df_h1_merge.to_csv('../data/df_h1_feature.csv', index=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
